# eeg_subj_indep_learning

./: .gitignore  README.md  activate.sh  diva_reconstruction.py  diva_translation.py  diva_translation_evaluation.py  dvae.py  main.py  pyproject.toml
CBraMod_main/: finetune_evaluator.py  finetune_main.py  finetune_trainer.py
CBraMod_main/datasets/: physio_dataset.py
CBraMod_main/models/: cbramod.py  cbramod_original.py  criss_cross_transformer.py  model_for_physio.py
CBraMod_main/preprocessing/: preprocessing_physio.py
configs/: config.py
data/: utils.py
data/data_preparation/: create_dataset_MI.py  create_dataset_MI_cbramod.py  create_dataset_amigos_cbramod.py  create_dataset_clare_cbramod.py  create_dataset_dreamer_cbramod.py  create_dataset_erp.py  create_dataset_erp_cbramod.py  create_dataset_openMIIR.py  create_dataset_stress_vr_cbramod.py  create_sleepedfx.py  create_sleepedfx_cbramod.py
data/dataloaders/: MI_loader.py  delegated_loader.py  erp_loader.py  precomputed_Feature_Loader.py  shared_loader.py  sleep_loader.py
features/: deep_feature_extractor.py  signal_processing.py
models/: losses.py
models/backbones/: __init__.py  pretrained_backbones.py  raw_eeg_backbones.py
pipelines/: analysis_blocks.py  main.py  training.py  translation.py
scripts/: CLARE_UV.sh  CLARE_grid.sh  Dreamer.sh  Dreamer_UV.sh  ERP.sh  MI.sh  MI_UV.sh  MI_div100.sh  Sleep_UV.sh  amigos.sh  analisi.sh  test.sh  tutteloss.sh  tuttelossAmigos.sh  tuttelossDreamer.sh  tuttelossSleep.sh  tuttelossStressVR.sh
utils/: argparser.py  helper.py
(+26 files in other folders)
